Added disclaimer to intro.html

--- a/intro.html
+++ b/intro.html
@@ -14,6 +14,17 @@ To join a mailing list discussing this JSR, go to:
 <A HREF="http://altair.cs.oswego.edu/mailman/listinfo/concurrency-interest"> http://altair.cs.oswego.edu/mailman/listinfo/concurrency-interest</A> .
 
 <p>
+<em>
+ Disclaimer - This prototype is experimental code developed as part of
+ JSR166 and made available to the developer community for use
+ as-is. It is not a supported product. Use it at your own risk. The
+ specification, language and implementation are subject to change as a
+ result of your feedback. Because these features have not yet been
+ approved for addition to the Java language, there is no schedule for
+ their inclusion in a product.
+</em>
+
+<p>
 Package java.util.concurrent contains utility classes that are
 commonly useful in concurrent programming. Like package java.util, it
 includes a few small standardized extensible frameworks, as well as
